# chic_mcp

./: .dockerignore  .env.example  .envrc.example  .gitignore  .gitleaks.toml  .golangci.yml  Caddyfile  DEPLOY.md  Dockerfile  Makefile  PYTHON_REWRITE.md  README.md  alembic.ini  docker-compose.yml  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.kamal/: secrets  secrets.example
chic/: __init__.py  __main__.py  app.py  buildinfo.py  clock.py  config.py  logging.py  scheduler.py  usecases.py
chic/agent/: __init__.py  agent.py  guardrail.py  prompts.py
chic/aggregate/: __init__.py  analytics.py  bridge.py  document.py  envelope.py  models.py  money.py  purchase.py  report.py
chic/cache/: __init__.py  client.py  store.py
chic/history/: __init__.py  analytics.py  models.py  olap.py  snapshot.py  store.py
chic/jobs/: __init__.py  base.py  digest.py  schedule.py  snapshot.py
chic/mcpserver/: __init__.py  helpers.py  server.py
chic/moysklad/: __init__.py  client.py  dates.py  documents.py  errors.py  models.py  options.py
chic/store/: __init__.py  db.py  models.py
chic/telegram/: __init__.py  bot.py  dedupe.py  keyboards.py  photo.py  render.py
chic/tracing/: __init__.py  phoenix.py  setup.py  spans.py
cmd/server/: main.go
config/: deploy.yml
internal/agent/: agent.go  agent_test.go  memory.go  memory_extra_test.go  summary.go
internal/aggregate/: analytics.go  analytics_test.go  document.go  document_test.go  envelope_test.go  money.go  product.go  product_test.go  report.go
internal/auth/: auth.go  auth_test.go
internal/buildinfo/: buildinfo.go
internal/cache/: cache_test.go  client.go  store.go
internal/llm/: client.go  client_test.go  types.go
internal/mcpserver/: helpers.go  server.go  server_test.go  tool_analytics.go  tool_currency.go  tool_documents.go  tool_products.go  tool_reports.go  tools_test.go  transport_test.go
internal/moysklad/: client.go  client_test.go  common.go  counterparties.go  currency.go  documents.go  list.go  period_test.go  products.go  reports.go  types.go
internal/oauth/: authorize.go  (+6 more)
scripts/: ci.sh
tests/: conftest.py  test_agent.py  test_agg_abc.py  test_agg_analytics.py  test_agg_bridge.py  test_agg_documents.py  test_agg_money.py  test_agg_purchase.py  test_agg_reports.py  test_cache_client.py  test_cache_store.py  test_config.py  test_guardrail.py  test_healthz.py  test_history.py  test_history_analytics.py  test_jobs.py  test_mcp_helpers.py  test_mcp_server.py  test_ms_client.py  test_ms_dates.py  test_ms_documents.py  test_store.py  test_telegram.py  test_tracing_spans.py
(+31 files in other folders)
