[project]
name = "chic"
version = "0.1.0"
description = "Chic — MoySklad analytics assistant (Telegram bot + MCP server)"
requires-python = ">=3.13"
# NOTE: dependencies grow per migration phase (see PYTHON_REWRITE.md). Phase 1
# only needs the web/config/logging core so the deploy contract (:8080 + /healthz)
# can be built and verified. The full locked stack — aiogram, pydantic-ai,
# mcp/FastMCP, pandas, sqlalchemy+alembic+aiosqlite, httpx+tenacity+aiolimiter,
# telegramify-markdown, opentelemetry+openinference — is added as each phase
# lands, so every phase keeps a resolvable lock and a green verify.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    # Phase 2 — MoySklad HTTP client + response cache
    "httpx>=0.28",
    "aiolimiter>=1.2",
    "aiosqlite>=0.20",
    # Phase 4 — MCP server (official SDK / FastMCP)
    "mcp>=1.2",
    # Phase 5 — durable store (SQLAlchemy 2.0 async + Alembic)
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    # Phase 5b — agent (pydantic-ai over OpenAI-compatible providers)
    "pydantic-ai-slim[openai]>=1.0",
    # Phase 6 — Telegram (aiogram webhook + telegramify-markdown rendering)
    "aiogram>=3.15",
    "telegramify-markdown>=1.2",
    # Phase 7 — observability (official Phoenix SDKs: OTel setup + REST client)
    "arize-phoenix-otel>=0.6",
    "arize-phoenix-client>=1.0",
    "opentelemetry-sdk>=1.29",
    "openinference-instrumentation-pydantic-ai>=0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "respx>=0.22",
    "bandit>=1.8",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chic"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["chic", "tests"]
extend-exclude = ["chic/store/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]
# The app is Russian-facing; Cyrillic that resembles Latin is intentional.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["chic", "tests"]
exclude = ["chic/store/migrations/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aiolimiter.*", "telegramify_markdown.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
